Promp para nuevos productos encontrados, solo implementarle el back, funciones basicas

--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -42,6 +42,12 @@
     </ion-button>
   </div>
 
+  <app-newfound-prompt
+    *ngIf="showNewProductsPrompt"
+    (allow)="reloadPage()"
+    (deny)="closePrompt()">
+  </app-newfound-prompt>
+
   <div *ngIf="isLoading" class="loading-container">
     <ion-spinner name="crescent"></ion-spinner>
     <p [class.claro]="modo" [class.oscuro]="!modo">{{ currentLoadingMessage }}</p>
