--- a/src/app/newfound-prompt/newfound-prompt.component.scss
+++ b/src/app/newfound-prompt/newfound-prompt.component.scss
@@ -71,7 +71,7 @@
 .deny-btn {
   --border-color: #e67e22;
   --background-activated: #d35400;
-  --color: white;
+  --color: var(--color);
   --border-radius: 6px;
   --padding-start: 0;
   --padding-end: 0;
@@ -79,6 +79,12 @@
   height: 28px;
   margin: 0;
   min-width: auto;
+}
+.btnclaro{
+  --color: #d35400;
+}
+.btnoscuro{
+  --color: #FFFFFF
 }
 
 /* Animación */
