--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -50,7 +50,7 @@
 
 /* ------------------ NOTIFICATION BADGE ------------------ */
 .notification-button {
-  position: fixed;
+  position: relative;
 }
 
 .notification-badge {
@@ -161,9 +161,7 @@
   --background: #e77e3c;
   --padding-start: 8px;
   --padding-end: 8px;
-  z-index: 9999;
-  right: 0;
-  top: 0;
+  z-index: 100;
 
   ion-icon {
     font-size: 24px;
