--- a/src/app/adminperfilpopover/adminperfilpopover.component.html
+++ b/src/app/adminperfilpopover/adminperfilpopover.component.html
@@ -1,13 +1,13 @@
-<ion-content class="popover-content login-background">
+<ion-content class="popover-content" [class.backgroundclaro]="modo" [class.backgroundoscuro]="!modo">
   <div class="contenido">
     <ion-grid [class.gridclaro]="modo" [class.gridoscuro]="!modo">
-      <ion-row class="ion-justify-content-center" style="align-items: center">
-        <ion-col size="5" class="ion-text-center">
+      <ion-row class="ion-justify-content-center ion-align-items-center">
+        <ion-col size="12" size-md="5" class="ion-text-center">
           <ion-card class="foto" [class.fotoclaro]="modo" [class.fotooscuro]="!modo">
             <img [src]="imagePath" alt="Vista previa" style="width: 100%; height: 100%; object-fit: cover;" />
           </ion-card>
         </ion-col>
-        <ion-col size="7" class="ion-text-center">
+        <ion-col size="12" size-md="7" class="ion-text-center">
           <ion-item lines="none" [class.itemclaro]="modo" [class.itemoscuro]="!modo">
             <ion-label position="floating">Foto del Perfil</ion-label>
             <ion-input [(ngModel)]="imagePath" placeholder="Introduce la URL de la imagen"></ion-input>
@@ -33,7 +33,6 @@
           </ion-item>
         </ion-col>
       </ion-row>
-
 
       <ion-row>
         <ion-col class="ion-text-center">
