--- a/src/app/paneladmin/paneladmin.component.html
+++ b/src/app/paneladmin/paneladmin.component.html
@@ -62,23 +62,25 @@
 
   <!-- Perfiles -->
   <h2 class="subtitulo" [class.claro]="modo" [class.oscuro]="!modo">Perfiles</h2>
-  <ion-grid class="perfil-grid">
-    <ion-row>
-      <ion-col size="12" size-sm="6" size-md="4" size-lg="3" size-xl="2.4" *ngFor="let perfil of perfiles">
-        <ion-card class="perfil-card" [class.cardclaro]="modo" [class.cardoscuro]="!modo">
-          <img [src]="perfil.imagen" alt="Imagen de {{ perfil.nombre }}" />
-          <ion-card-header>
-            <ion-card-title [class.claro]="modo" [class.oscuro]="!modo">{{ perfil.nombre }}</ion-card-title>
-            <ion-badge [color]="perfil.baneado ? 'danger' : 'success'">
-              {{ perfil.baneado ? 'Baneado' : 'Activo' }}
-            </ion-badge>
-          </ion-card-header>
-          <ion-card-content>
-            <ion-button (click)="abrirModificarPerfil(perfil)" expand="block" fill="outline" size="small" class="login-button">Modificar</ion-button>
-            <ion-button (click)="eliminarPerfil(perfil)" expand="block" fill="outline" size="small" color="danger" class="login-button">Eliminar</ion-button>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <div class="perfiles-container custom-swiper">
+    <ion-grid class="perfil-grid">
+      <ion-row class="ion-justify-content-center">
+        <ion-col size="12" size-sm="6" size-md="4" size-lg="3" size-xl="2.4" *ngFor="let perfil of perfiles">
+          <ion-card class="perfil-card" [class.cardclaro]="modo" [class.cardoscuro]="!modo">
+            <img [src]="perfil.imagen" alt="Imagen de {{ perfil.nombre }}" />
+            <ion-card-header>
+              <ion-card-title [class.claro]="modo" [class.oscuro]="!modo">{{ perfil.nombre }}</ion-card-title>
+              <ion-badge [color]="perfil.baneado ? 'danger' : 'success'">
+                {{ perfil.baneado ? 'Baneado' : 'Activo' }}
+              </ion-badge>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-button (click)="abrirModificarPerfil(perfil)" expand="block" fill="outline" size="small" class="login-button">Modificar</ion-button>
+              <ion-button (click)="eliminarPerfil(perfil)" expand="block" fill="outline" size="small" color="danger" class="login-button">Eliminar</ion-button>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
