--- a/src/app/paneladmin/paneladmin.component.scss
+++ b/src/app/paneladmin/paneladmin.component.scss
@@ -107,10 +107,23 @@ ion-button {
 }
 
 .perfil-grid {
-  padding: 0 16px;
+  padding: 0;
   margin: 0 auto;
   max-width: 1300px;
 }
+
+.perfiles-container.custom-swiper {
+  padding: 10px 16px 40px 16px; /* Mismo padding que el swiper */
+  margin: 0 auto;
+  margin-bottom: 20px;
+  max-width: 1300px;
+}
+
+ion-col {
+  display: flex;
+  justify-content: center;
+}
+
 
 .perfil-card {
   border-radius: 16px;
